[gd_scene load_steps=7 format=3 uid="uid://dkumm5165qubl"]

[ext_resource type="Script" path="res://prefabs/blocker.gd" id="1_3get6"]
[ext_resource type="Texture2D" uid="uid://dcfwe2ptoj4sp" path="res://assets/blocker.svg" id="1_fqh2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4t01u"]
radius = 297.061

[sub_resource type="CircleShape2D" id="CircleShape2D_auveh"]
radius = 270.007

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3srn2"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bxned"]
normal = Vector2(-1, 0)

[node name="Blocker" type="Area2D"]
collision_layer = 0
script = ExtResource("1_3get6")

[node name="BlockerTexture" type="TextureProgressBar" parent="."]
offset_left = -297.0
offset_top = -297.0
offset_right = 297.0
offset_bottom = 297.0
value = 25.0
fill_mode = 4
texture_progress = ExtResource("1_fqh2m")

[node name="OuterCircleArea" type="Area2D" parent="."]
collision_mask = 0

[node name="OuterCircleCollider" type="CollisionShape2D" parent="OuterCircleArea"]
shape = SubResource("CircleShape2D_4t01u")

[node name="InnerCircleArea" type="Area2D" parent="."]
collision_mask = 0

[node name="InnerCircleCollider" type="CollisionShape2D" parent="InnerCircleArea"]
shape = SubResource("CircleShape2D_auveh")

[node name="RightArea" type="Area2D" parent="."]
collision_mask = 0

[node name="RightCollider" type="CollisionShape2D" parent="RightArea"]
shape = SubResource("WorldBoundaryShape2D_3srn2")

[node name="LeftArea" type="Area2D" parent="."]
collision_mask = 0

[node name="LeftCollider" type="CollisionShape2D" parent="LeftArea"]
shape = SubResource("WorldBoundaryShape2D_bxned")
